# simple-plasmoids

./: README.md
demoListView/: main.qml
engineplasmoid/: CMakeLists.txt
engineplasmoid/timetable/contents/ui/: Timetable.qml  TimetableDelegate.qml  main.qml
helloworld/: CMakeLists.txt
helloworld/plasmoid/: metadata.desktop
helloworld/plasmoid/contents/ui/: main.qml
helloworld/plugin/: backend.cpp  backend.h  helloworldplugin.cpp  helloworldplugin.h  model.cpp  model.h  qmldir
timedataengineDemo/: CMakeLists.txt
timedataengineDemo/timedemo/: metadata.desktop
timedataengineDemo/timedemo/contents/ui/: main.qml
